--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
       context: .docker/php7.3-dev
     volumes:
       - ~/.composer/cache/:/.composer_cache/:rw
-      - ..:/packages:rw
-    working_dir: /packages/Task
+      - .:/app:rw
+    working_dir: /app
