added docker, removed broadway/broadway, added micro-module/broadway

--- a/default.env
+++ b/default.env
@@ -1,4 +1,5 @@
 ###> common variables ###
 MICROTASK_COMPOSE_PROJECT_NAME=micro-task
 CI_COMMIT_REF_SLUG=master
+PHP_VER=8.0
 ###< common variables ###
