--- a/composer.json
+++ b/composer.json
@@ -4,33 +4,33 @@
     "description": "Micro module Task common library",
     "license": "proprietary",
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^8.0",
         "beberlei/assert": "^3.2",
-        "broadway/broadway": "^2.2",
-        "queue-interop/amqp-interop": "^0.8",
-        "queue-interop/queue-interop": "^0.7|^0.8",
         "enqueue/enqueue": "^0.10",
         "enqueue/fs": "^0.10",
         "enqueue/null": "^0.10",
         "league/tactician-bundle": "^1.1",
-        "micro-module/tactician-command-events": "~0.7",
-        "micro-module/base": "~0.7",
+        "micro-module/base": "^0.7.0",
+        "micro-module/broadway": "^2.6",
         "micro-module/job-queue": "~0.10",
-        "psr/log": "^1.1"
+        "micro-module/tactician-command-events": "~0.7",
+        "psr/log": "^1.1",
+        "queue-interop/amqp-interop": "^0.8",
+        "queue-interop/queue-interop": "^0.7|^0.8"
     },
     "require-dev": {
+        "mockery/mockery": "^1.3",
         "php-parallel-lint/php-console-highlighter": "^0.4",
         "php-parallel-lint/php-parallel-lint": "^1.0",
-        "mockery/mockery": "^1.3",
         "phpmd/phpmd": "^2.8",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-mockery": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
         "phpunit/phpunit": "^9.0",
         "roave/security-advisories": "dev-master",
-        "sensiolabs-de/deptrac-shim": "^0.4",
-        "symplify/easy-coding-standard": "^7.2",
-        "vimeo/psalm": "^3.11"
+        "sensiolabs-de/deptrac-shim": "^0.15.2",
+        "symplify/easy-coding-standard": "^9.4",
+        "vimeo/psalm": "^4.10"
     },
     "config": {
         "preferred-install": {
