--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,13 @@ version: "3.7"
 
 services:
   php:
-    container_name: ${MICROTSK_COMPOSE_PROJECT_NAME}_php
+    container_name: ${MICROTASK_COMPOSE_PROJECT_NAME}_php
     user: 1000:1000
     build:
-      context: .docker/php7.3-dev
+      context: .docker/php8.0-dev
     volumes:
       - ~/.composer/cache/:/.composer_cache/:rw
-      - .:/app:rw
+      - ./:/app:rw
     working_dir: /app
+    env_file:
+      - .env
