--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "require": {
         "php": "^8.0",
         "beberlei/assert": "^3.2",
-        "enqueue/enqueue": "^0.10",
+        "micro-module/enqueue": "^0.10",
         "enqueue/fs": "^0.10",
-        "enqueue/null": "^0.10",
+        "micro-module/null": "^0.11",
         "league/tactician-bundle": "^1.1",
         "micro-module/base": "^0.7.0",
         "micro-module/broadway": "^2.6",
