--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,19 @@
     "description": "Micro module Task common library",
     "license": "proprietary",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "beberlei/assert": "^3.2",
         "micro-module/enqueue": "^0.10",
         "micro-module/enqueue-fs": "^0.10",
         "micro-module/null": "^0.11",
         "league/tactician-bundle": "^1.1",
-        "micro-module/base": "^0.9",
+        "micro-module/base": "^0.9 || ^0.10",
         "micro-module/broadway": "^2.6",
-        "micro-module/job-queue": "~0.10",
-        "micro-module/tactician-command-events": "~0.7",
-        "psr/log": "^1.1",
+        "micro-module/job-queue": "^0.10 || ^0.11",
+        "micro-module/tactician-command-events": "^0.7 || ^0.8",
+        "psr/log": "^1.1 || ^2.0 || ^3.0",
         "queue-interop/amqp-interop": "^0.8",
-        "queue-interop/queue-interop": "^0.7|^0.8"
+        "queue-interop/queue-interop": "^0.7 || ^0.8"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
